# eval_playground

./: .gitignore  snowflake_loading_script.sql
.github/: copilot-instructions.md
bird-sql/: .env.example  AGENTAR_SCALE_SQL.md  AZURE_OPENAI.md  COMPARISON.md  COMPLETION.md  FAISS_VECTOR_SEARCH_UPDATE.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  PARSING_ERROR_FIX.md  QUICKSTART_AGENTAR.md  QUICK_REFERENCE.md  README.md  agentar-scale.md  agentar_scale_sql.py  analysis.ipynb  analyze_agent_behavior.py  analyze_csv_export.py  debit_card_semantic_model.json  debit_card_semantic_model.md  debit_card_semantic_model.yaml  evaluator.py  hello.py  init.md  langchain_db_agent.py  pyproject.toml  requirements.txt  run_evaluation.py  snowflake_cortex_analyst.py  snowflake_semantic_example.yaml  sql_normalizer.py  sqlite_to_csv.py  test_agentar_scale_sql.py  test_error_extraction.py  test_faiss_vector_search.py  test_parsing_error.py  test_parsing_error_full.py  test_setup.py  vanilla_text2sql.py
bird-sql/docs/: ARCHITECTURE.md
bird-sql/evaluation_results/: agentar-scale-sql_metrics_20251017_155352.json  agentar-scale-sql_results_20251017_155352.json  comparison_20251013_140153.csv  comparison_20251013_144531.csv  comparison_20251017_155352.csv
hotpot_qa/: README.md  azure_ai_search.py  document_processor.py  embedding_generator.py  evaluation.py  evaluation_results.json  evaluation_results_v0.json  faiss_retriever.py  hotpot_qa_for_azure_ai_search.md  requirements.txt  result.txt  run_evaluation.py  test_embedding_refactor.py
tasks/: init.md
